# MCP-and-AI-Powered-Job-Recommendsys

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py  template.py
job_recommender/: helper_func.py  job_api.py
job_recommender/logger/: logger.py
